[package]
name = "rustload"
version = "0.1.0"
authors = ["Arunanshu Biswas <mydellpc07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ">=1.0.41"
clap = ">=2.33.3"
confy = ">=0.4.0"
daemonize = ">=0.4.1"
derivative = ">=2.2.0"
diesel = { version = ">=1.4.7", features = ["sqlite"] }
diesel_migrations = ">=1.4.0"
indoc = ">=1.0.3"
lazy_static = ">=1.4.0"
log = ">=0.4.14"
log4rs = ">=1.0.0"
ordered-float = { version = ">=2.7.0", features = ["serde"] }
serde = { version = ">=1.0.126", features = ["derive"] }
signal-hook = ">=0.3.9"
structopt = ">=0.3.21"
strum_macros = ">=0.21.1"
terminal_size = ">=0.1.17"
url = ">=2.2.2"

[profile.release]
lto = "yes"
