# cargo-features = ["strip"]

[package]
name = "rustload"
version = "0.1.0"
authors = ["Arunanshu Biswas <mydellpc07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.62"
calloop = "^0.9.1"
clap = "^3.2.17"
confy = "^0.4.0"
daemonize = "^0.4.1"
derivative = "^2.2.0"
derive_more = "^0.99.17"
diesel = { version = "^1.4.8", features = ["sqlite"] }
diesel_migrations = "^1.4.0"
indoc = "^1.0.7"
lazy_static = "^1.4.0"
libc = "^0.2.132"
log = "^0.4.14"
log4rs = "^1.1.1"
# memmap2 = "^0.5.0"
nix = "^0.25.0"
ordered-float = { version = "^3.0.0", features = ["serde"] }
procfs = "^0.14.0"
rayon = "^1.5.1"
rmp-serde = "^1.1.0"
semver = "^1.0.13"
serde = { version = "^1.0.144", features = ["derive"] }
structopt = "^0.3.26"
# sysinfo = "^0.20.4"
terminal_size = "^0.2.1"
# thiserror = "^1.0.30"
url = "^2.2.2"

[profile.dev]
opt-level = 1

[profile.release]
lto = "yes"
codegen-units = 1
opt-level = "s"
# strip = true
panic = "abort"
